--- a/storage/css/create-page.css
+++ b/storage/css/create-page.css
@@ -146,25 +146,51 @@ form[name="create-form"] .space_container {
 form[name="create-form"] .submit_container {
     display: block;
     position: fixed;
-    left: 0;
+    left: 50%;
     bottom: 0;
+    transform: translateX(-50%);
     height: 40px;
-    width: 100%;
+    width: 310px;
+    max-width: 85%;
     text-align: center;
     background: var(--back-color);
     box-shadow: 0 0 15px 20px var(--back-color);
 }
 
-form[name="create-form"] input[type="submit"] {
-    display: block;
-    width: auto;
+form[name="create-form"] .submit_container input {
+    position: relative;
+    display: inline-block;
+    width: 50%;
+    top: -10px;
+    margin: 0;
     height: 40px;
     border: 0;
-    margin: 0 auto;
-    margin-top: -10px;
-    font-size: 70%;
+    font-size: 65%;
+    text-transform: lowercase;
+    /* text-decoration: underline; */
 
     background: transparent;
     outline: none;
     -webkit-tap-highlight-color: transparent !important;
 }
+
+
+
+
+
+/* experimental */
+/* form {
+    box-shadow: 0px 8px 40px -20px var(--main-color);
+    border-radius: 0 0 15px 15px;
+}
+
+form[name="create-form"] .submit_container {
+    height: 60px;
+    box-shadow: 0px 0px 20px -10px var(--main-color);
+    border-radius: 15px 15px 0 0;
+}
+
+form[name="create-form"] .submit_container input {
+    top: 0;
+    height: 60px;
+} */
