--- a/storage/css/create-page.css
+++ b/storage/css/create-page.css
@@ -179,6 +179,16 @@ form[name="create-form"] .submit_container input {
 
 
 /* experimental */
+form fieldset {
+    margin: 0;
+    padding: 0;
+    border: 0;
+}
+
+select:disabled {
+    opacity: 1;
+}
+
 /* form {
     box-shadow: 0px 8px 40px -20px var(--main-color);
     border-radius: 0 0 15px 15px;
