--- a/storage/css/create-page.css
+++ b/storage/css/create-page.css
@@ -14,7 +14,7 @@ body[data-create-page] main {
 
 /* главные поля формы */
 input#shopname {
-    margin: 32px 0;
+    margin: 24px 0;
     margin-bottom: 0;
     text-overflow: ellipsis;
 }
@@ -25,7 +25,7 @@ input#date {
     width: auto;
     border: 0;
     padding: 0 4px;
-    margin: 32px auto;
+    margin: 24px auto;
     margin-top: 0;
     -webkit-appearance: none;
     
@@ -138,18 +138,18 @@ td select {
 
 
 /* кнопка отправки*/
-form[name="create-form"] .space_container {
+form .space_container {
     width: 100%;
-    height: 70px;
+    height: 75px;
 }
 
-form[name="create-form"] .submit_container {
+form .submit_container {
     display: block;
     position: fixed;
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
-    height: 40px;
+    height: 50px;
     width: 310px;
     max-width: 85%;
     text-align: center;
@@ -157,15 +157,16 @@ form[name="create-form"] .submit_container {
     box-shadow: 0 0 15px 20px var(--back-color);
 }
 
-form[name="create-form"] .submit_container input {
+form .submit_container input {
     position: relative;
     display: inline-block;
     width: 50%;
     top: -10px;
     margin: 0;
-    height: 40px;
-    border: 0;
-    font-size: 65%;
+    height: 45px;
+    border: 1px solid var(--main-color);
+    font-size: 55%;
+    line-height: 55%;
     text-transform: lowercase;
     /* text-decoration: underline; */
 
@@ -173,6 +174,28 @@ form[name="create-form"] .submit_container input {
     outline: none;
     -webkit-tap-highlight-color: transparent !important;
 }
+
+form[name="view-form"] .submit_container input {
+    color: var(--back-color);
+    background: var(--main-color);
+    width: 60%;
+    border-radius: 4px;
+}
+
+form[name="create-form"] .submit_container input:first-child {
+    color: var(--back-color);
+    background: var(--main-color);
+    border-radius: 4px 0 0 4px;
+}
+
+form[name="create-form"] .submit_container input:last-child {
+    border-radius: 0 4px 4px 0;
+    border-left: 0;
+}
+
+form .submit_container input:hover, form .submit_container input:active, form .submit_container input:focus {
+    opacity: .85;
+} 
 
 
 
