--- a/storage/css/list-page.css
+++ b/storage/css/list-page.css
@@ -27,6 +27,19 @@ tbody {
     display: block;
 }
 
+div#alert {
+    display: none;
+}
+
+div#alert[data-visible] {
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 75%;
+    transform: translate(-50%, -50%);
+}
+
 
 
 
@@ -53,6 +66,10 @@ tr:nth-child(2n) {
 
 tr:last-child {
     border-radius: 0 0 8px 8px;
+}
+
+tr:only-child {
+    border-radius: 8px;
 }
 
 
@@ -117,7 +134,8 @@ span {
 
 .navigation_container input:first-child {
     border-radius: 4px 0 0 4px;
-    border-right: 0;
+    color: var(--back-color);
+    background: var(--main-color);
 }
 
 .navigation_container input:last-child {
@@ -133,7 +151,7 @@ span {
     border-radius: 4px;
 }
 
-.navigation_container input:hover, .navigation_container input:active,
+.navigation_container input:active,
 .navigation_container input:focus {
     opacity: .85;
 }
