--- a/storage/css/list-page.css
+++ b/storage/css/list-page.css
@@ -69,7 +69,7 @@ tr:nth-child(2n + 1) {
 }
 
 tr:nth-child(2n) {
-    border: 3px solid var(--main-color);
+    background: rgb(225, 225, 225);
 }
 
 tr:last-child {
@@ -161,7 +161,7 @@ span {
     border-width: 1px;
     color: var(--back-color);
     background: var(--main-color);
-    width: 60%;
+    /* width: 60%; */
     border-radius: 4px;
 }
 
