--- a/storage/css/create-page.css
+++ b/storage/css/create-page.css
@@ -199,7 +199,7 @@ form .space_container {
     width: 45px;
     background-color: var(--main-color);
     background-image: url('../imgs/trash.svg');
-    background-size: contain;
+    background-size: cover;
     background-origin: border-box;
     font-size: 0;
     vertical-align: bottom;
